@@ -2,7 +2,7 @@
 set -e
 
 update_modules () {
-    for dir in immodules; do
+    for dir in immodules printbackends; do
         if [ -d "/@MODULES_BASE_PATH@/$dir" ]; then
             /@LIBDIR@/glib-2.0/gio-querymodules "/@MODULES_BASE_PATH@/$dir" || true
         fi
@@ -11,7 +11,7 @@ update_modules () {
 
 if [ "$1" = triggered ]; then
     # This is triggered everytime an application installs a
-    # GTK IM module
+    # GTK IM module or print backend
     update_modules
     exit 0
 fi
