@@ -7,5 +7,6 @@ set -e
 if [ -d /@MODULES_BASE_PATH@ ]; then
     # Purge the cache
     rm -f /@MODULES_BASE_PATH@/immodules.cache
+    rm -f /@MODULES_BASE_PATH@/printbackends.cache
     rmdir -p --ignore-fail-on-non-empty /@MODULES_BASE_PATH@
 fi
