@@ -1,1 +1,2 @@
 interest-noawait /@MODULES_BASE_PATH@/immodules
+interest-noawait /@MODULES_BASE_PATH@/printbackends
